[gd_scene load_steps=27 format=2]

[ext_resource path="res://client/world/player/bird_eyes.png" type="Texture" id=1]
[ext_resource path="res://client/world/player/bird_outline_1.png" type="Texture" id=2]
[ext_resource path="res://client/world/player/unf.ogg" type="AudioStream" id=3]
[ext_resource path="res://client/world/player/uuh.ogg" type="AudioStream" id=4]
[ext_resource path="res://client/audio/death.ogg" type="AudioStream" id=5]
[ext_resource path="res://client/world/player/ahuah.ogg" type="AudioStream" id=6]
[ext_resource path="res://client/world/player/huah.ogg" type="AudioStream" id=7]
[ext_resource path="res://client/world/player/player.gd" type="Script" id=8]
[ext_resource path="res://common/world/player/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://client/world/player/player_controller.tscn" type="PackedScene" id=10]
[ext_resource path="res://client/world/player/bird_body.png" type="Texture" id=11]
[ext_resource path="res://client/world/player/bird_outline_0.png" type="Texture" id=12]
[ext_resource path="res://client/world/player/bird_beak.png" type="Texture" id=13]
[ext_resource path="res://client/theme/flappy.theme" type="Theme" id=14]
[ext_resource path="res://client/audio/coin.ogg" type="AudioStream" id=15]
[ext_resource path="res://client/audio/coin_lost.ogg" type="AudioStream" id=16]
[ext_resource path="res://client/world/player/explode_2.png" type="Texture" id=17]
[ext_resource path="res://client/world/player/explode_4.png" type="Texture" id=18]
[ext_resource path="res://client/world/player/explode_3.png" type="Texture" id=19]
[ext_resource path="res://client/world/player/explode_0.png" type="Texture" id=20]
[ext_resource path="res://client/world/player/explode_1.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "DeathCooldown"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "despawn"

[node name="Player" instance=ExtResource( 9 )]
script = ExtResource( 8 )
PlayerController = ExtResource( 10 )

[node name="Sprites" type="Node2D" parent="." index="1"]
position = Vector2( 0, 1 )

[node name="Body" type="Sprite" parent="Sprites" index="0"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
texture = ExtResource( 11 )

[node name="Beak" type="Sprite" parent="Sprites" index="1"]
texture = ExtResource( 13 )

[node name="Eyes" type="Sprite" parent="Sprites" index="2"]
texture = ExtResource( 1 )

[node name="AnimatedOutline" type="AnimatedSprite" parent="Sprites" index="3"]
frames = SubResource( 1 )

[node name="DespawnSprite" type="AnimatedSprite" parent="." index="2"]
visible = false
frames = SubResource( 5 )

[node name="Flap1" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 6 )
attenuation = 3.86374
bus = "Player"

[node name="Flap2" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 7 )
attenuation = 3.36359
bus = "Player"

[node name="Flap3" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 3 )
attenuation = 3.4822
bus = "Player"

[node name="Flap4" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 4 )
attenuation = 5.46415
bus = "Player"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 5 )
volume_db = 13.386
attenuation = 3.36358
bus = "Player"

[node name="Coin" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource( 15 )
volume_db = 1.029
attenuation = 3.86374
bus = "Player"

[node name="CoinLost" type="AudioStreamPlayer2D" parent="." index="10"]
stream = ExtResource( 16 )
volume_db = 5.149
attenuation = 3.86374
bus = "Player"

[node name="NameLabel" type="Label" parent="." index="11"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.5
margin_top = -62.0
margin_right = 28.5
margin_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 14 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="13"]
anims/DeathCooldown = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/despawn = SubResource( 4 )
